--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 		<link rel="stylesheet" href="styles.css">
 	</head>
 	<body>
+		<button id="my-button">Easy</button>
+		<p>A physical version of this app can be found in Mr. DeRuiter's APCS classroom.</p>
 		<script src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
 		<script src="script.js"></script>
 	</body>
